MiniCssExtractPlugin css中图片路径不正确

--- a/16生产环境配置/src/index.html
+++ b/16生产环境配置/src/index.html
@@ -19,6 +19,8 @@
   <div class="box1"></div>
   <div class="box2"></div>
   <div class="box3"></div>
+  <!-- img图片 -->
+  <img src="./imgs/3.png" alt="3.png">
 </body>
 
 </html>
